argocd/apps/services/manifests/astroneer-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: astroneer-server
  namespace: astroneer
spec:
  type: LoadBalancer
  selector:
    app: astroneer-server
  ports:
  - name: astroneer-server
    port: 7777
    protocol: UDP
    targetPort: astroneer-server
